# evolution-source

./: CMakeLists.txt  config.h.in
src/: CMakeLists.txt  e-book-backend-aggregator-factory.c  e-book-backend-aggregator.c  e-book-backend-aggregator.h  e-book-meta-view.c  e-book-meta-view.h
utils/: create-source.py  listSources.py
